fixed layout issues

--- a/src/app/Styles/globals.scss
+++ b/src/app/Styles/globals.scss
@@ -27,7 +27,7 @@ body {
 }
 
 .header {
-  @apply text-white bg-transparent w-full grid grid-cols-2 items-center py-6 px-20 sticky top-0 z-50 duration-500;
+  @apply text-white bg-transparent w-full grid grid-cols-2 items-center py-6 px-20 fixed top-0 z-50 duration-500;
 }
 
 .heroSection {
